--- a/app/src/main/res/layout/content_form_medic_aset.xml
+++ b/app/src/main/res/layout/content_form_medic_aset.xml
@@ -112,7 +112,7 @@
                             android:hint="Nama"
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="text|textCapWords"
                             android:text="" />
                     </LinearLayout>
 
@@ -141,7 +141,7 @@
                             android:hint="Brand"
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="text|textCapWords"
                             android:text="" />
                     </LinearLayout>
 
@@ -169,7 +169,7 @@
                             android:hint="Tipe"
                             android:padding="@dimen/min_padding"
                             android:imeOptions="actionNext"
-                            android:inputType="text"
+                            android:inputType="text|textCapWords"
                             android:text="" />
                     </LinearLayout>
 
@@ -234,11 +234,11 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Hari"
+                                android:hint="0"
                                 android:padding="@dimen/min_padding"
                                 android:imeOptions="actionNext"
                                 android:inputType="number"
-                                android:text="0" />
+                                android:text="" />
 
                             <TextView
                                 android:id="@+id/day"
@@ -282,7 +282,7 @@
                                 android:layout_weight="1"
                                 android:checked="false"
                                 android:paddingEnd="@dimen/min_padding"
-                                android:text="Delivery" />
+                                android:text="Dikirim" />
 
                             <CheckBox
                                 android:id="@+id/as_ck_pickup"
@@ -292,7 +292,7 @@
                                 android:layout_weight="1"
                                 android:checked="false"
                                 android:paddingEnd="@dimen/min_padding"
-                                android:text="Pickup" />
+                                android:text="Dijemput" />
 
                         </LinearLayout>
 
@@ -319,29 +319,29 @@
                             android:text="Asuransi" />
 
 
-                        <EditText
-                            android:id="@+id/as_assurance_price"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:background="@color/colorNearWhite"
-                            android:layout_toEndOf="@id/as_ck_assurance"
-                            android:ems="10"
-                            android:hint="Nominal"
-                            android:padding="@dimen/min_padding"
-                            android:imeOptions="actionNext"
-                            android:inputType="number"
-                            android:text="0" />
+                        <!--<EditText-->
+                            <!--android:id="@+id/as_assurance_price"-->
+                            <!--android:layout_width="match_parent"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:background="@color/colorNearWhite"-->
+                            <!--android:layout_toEndOf="@id/as_ck_assurance"-->
+                            <!--android:ems="10"-->
+                            <!--android:hint="Nominal"-->
+                            <!--android:padding="@dimen/min_padding"-->
+                            <!--android:imeOptions="actionNext"-->
+                            <!--android:inputType="number"-->
+                            <!--android:text="0" />-->
 
-                        <TextView
-                            android:id="@+id/idr"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="IDR"
-                            android:layout_alignParentEnd="true"
-                            android:layout_centerVertical="true"
-                            android:textColor="@color/colorBlack54"
-                            android:layout_marginEnd="@dimen/min_padding"
-                            android:textSize="@dimen/medium_text" />
+                        <!--<TextView-->
+                            <!--android:id="@+id/idr"-->
+                            <!--android:layout_width="wrap_content"-->
+                            <!--android:layout_height="wrap_content"-->
+                            <!--android:text="IDR"-->
+                            <!--android:layout_alignParentEnd="true"-->
+                            <!--android:layout_centerVertical="true"-->
+                            <!--android:textColor="@color/colorBlack54"-->
+                            <!--android:layout_marginEnd="@dimen/min_padding"-->
+                            <!--android:textSize="@dimen/medium_text" />-->
 
                     </RelativeLayout>
 
@@ -368,7 +368,7 @@
                             android:ems="10"
                             android:gravity="start"
                             android:hint="Keterangan"
-                            android:inputType="textMultiLine"
+                            android:inputType="textMultiLine|textCapSentences"
                             android:lines="3"
                             android:padding="@dimen/min_padding"
                             android:text="Sekilas Tentang Aset" />
@@ -380,7 +380,7 @@
 
             <android.support.v7.widget.CardView
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_marginBottom="@dimen/xmin_padding">
 
                 <LinearLayout
@@ -394,6 +394,7 @@
                     <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/xmin_padding"
                         android:background="@color/colorPrimary"
                         android:padding="@dimen/min_padding">
 
@@ -429,28 +430,54 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <EditText
+                            <com.aldoapps.autoformatedittext.AutoFormatEditText
                                 android:id="@+id/as_price_basic"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Harga"
-                                android:inputType="number"
+                                app:isDecimal="false"
+                                android:maxLength="13"
+                                android:hint="0"
                                 android:padding="@dimen/min_padding"
-                                android:text="" />
+                                android:background="@color/colorNearWhite"
+                                />
 
                             <TextView
                                 android:id="@+id/idra"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="IDR"
-                                android:layout_alignParentEnd="true"
                                 android:layout_centerVertical="true"
+                                android:layout_alignParentEnd="true"
                                 android:textColor="@color/colorGrey"
                                 android:layout_marginEnd="@dimen/min_padding"
                                 android:textSize="@dimen/medium_text" />
+                        </RelativeLayout>
 
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <TextView
+                                android:id="@+id/disptext"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorGrey"
+                                android:layout_marginTop="@dimen/small_space"
+                                android:text="Harga yang ditampilkan (+20%):"
+                                android:textSize="@dimen/almost_tiny_text" />
+
+                            <TextView
+                                android:id="@+id/as_price_basic_disp"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/colorPrice"
+                                android:layout_toEndOf="@+id/disptext"
+                                android:layout_alignParentEnd="true"
+                                android:textAlignment="textEnd"
+                                android:layout_marginTop="@dimen/small_space"
+                                android:text="0 IDR"
+                                android:textSize="@dimen/under_small_text" />
                         </RelativeLayout>
 
                     </LinearLayout>
@@ -460,7 +487,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="vertical"
-                        android:visibility="gone">
+                        android:visibility="gone"
+                        >
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -473,7 +501,7 @@
                                 android:id="@+id/textView12w"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
-                                android:text="Range Name"
+                                android:text="Nama Periode"
                                 android:textColor="@color/colorBlack"
                                 android:textSize="12sp" />
 
@@ -483,10 +511,10 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Nama"
-                                android:inputType="textPersonName"
+                                android:hint="Nama Periode"
+                                android:inputType="textPersonName|textCapWords"
                                 android:padding="@dimen/min_padding"
-                                android:text="High Season" />
+                                android:text="" />
 
                         </LinearLayout>
 
@@ -511,10 +539,12 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="Start Date"
-                                android:inputType="number"
+                                android:editable="false"
+                                android:inputType="date|none"
+                                android:drawableEnd="@drawable/ic_date_range_black_24dp"
+                                android:hint="Tanggal Mulai"
                                 android:padding="@dimen/min_padding"
-                                android:text="2017-10-09" />
+                                android:text="" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -538,10 +568,12 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
-                                android:hint="End Date"
-                                android:inputType="number"
+                                android:inputType="date|none"
+                                android:editable="false"
+                                android:drawableEnd="@drawable/ic_date_range_black_24dp"
+                                android:hint="Tanggal Akhir"
                                 android:padding="@dimen/min_padding"
-                                android:text="2017-12-09" />
+                                android:text="" />
                         </LinearLayout>
 
                         <LinearLayout
@@ -563,16 +595,28 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
-                                <EditText
+                                <!--<EditText-->
+                                <!--android:id="@+id/as_price_advance"-->
+                                <!--android:layout_width="match_parent"-->
+                                <!--android:layout_height="wrap_content"-->
+                                <!--android:background="@color/colorNearWhite"-->
+                                <!--android:ems="10"-->
+                                <!--android:hint="Harga"-->
+                                <!--android:inputType="number"-->
+                                <!--android:padding="@dimen/min_padding"-->
+                                <!--android:text="" />-->
+
+                                <com.aldoapps.autoformatedittext.AutoFormatEditText
                                     android:id="@+id/as_price_advance"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:background="@color/colorNearWhite"
                                     android:ems="10"
-                                    android:hint="Harga"
-                                    android:inputType="number"
+                                    android:maxLength="13"
+                                    app:isDecimal="false"
+                                    android:hint="0"
                                     android:padding="@dimen/min_padding"
-                                    android:text="" />
+                                    android:background="@color/colorNearWhite"
+                                    />
 
                                 <TextView
                                     android:id="@+id/daye"
@@ -585,6 +629,32 @@
                                     android:layout_marginEnd="@dimen/min_padding"
                                     android:textSize="@dimen/medium_text" />
 
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/disptext2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/colorGrey"
+                                    android:layout_marginTop="@dimen/small_space"
+                                    android:text="Harga yang ditampilkan (+20%):"
+                                    android:textSize="@dimen/almost_tiny_text" />
+
+                                <TextView
+                                    android:id="@+id/as_price_advance_disp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/colorPrice"
+                                    android:layout_toEndOf="@+id/disptext2"
+                                    android:layout_alignParentEnd="true"
+                                    android:textAlignment="textEnd"
+                                    android:layout_marginTop="@dimen/small_space"
+                                    android:text="0 IDR"
+                                    android:textSize="@dimen/under_small_text" />
                             </RelativeLayout>
                         </LinearLayout>
 
@@ -599,6 +669,7 @@
                         android:textColor="@color/colorPrimary"
                         android:textSize="@dimen/small_text"
                         android:clickable="true"/>
+
 
                 </LinearLayout>
 
