--- a/app/src/main/res/layout/content_form_car_aset.xml
+++ b/app/src/main/res/layout/content_form_car_aset.xml
@@ -270,7 +270,8 @@
                             android:background="@color/colorNearWhite"
                             android:ems="10"
                             android:hint="Tahun Produksi"
-                            android:inputType="textPersonName"
+                            android:inputType="number"
+                            android:maxLength="4"
                             android:padding="@dimen/min_padding"
                             android:text="" />
                     </LinearLayout>
@@ -635,6 +636,49 @@
 
                     <LinearLayout
                         android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="@dimen/xmin_padding"
+                        >
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="Metode Pengiriman"
+                            android:textColor="@color/colorBlack"
+                            android:textSize="12sp" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:orientation="horizontal"
+                            android:background="@color/colorNearWhite">
+
+                            <CheckBox
+                                android:id="@+id/as_ck_delivery"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/xmin_padding"
+                                android:layout_weight="1"
+                                android:checked="false"
+                                android:paddingEnd="@dimen/min_padding"
+                                android:text="Dikirim" />
+
+                            <CheckBox
+                                android:id="@+id/as_ck_pickup"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="@dimen/xmin_padding"
+                                android:layout_weight="1"
+                                android:checked="false"
+                                android:paddingEnd="@dimen/min_padding"
+                                android:text="Dijemput" />
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:layout_marginBottom="@dimen/xmin_padding"
                         android:orientation="vertical"
@@ -764,41 +808,17 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content">
 
-                            <!--<EditText-->
-                                <!--android:id="@+id/as_price_basic"-->
-                                <!--android:layout_width="match_parent"-->
-                                <!--android:layout_height="wrap_content"-->
-                                <!--android:background="@color/colorNearWhite"-->
-                                <!--android:ems="10"-->
-                                <!--android:hint="0"-->
-                                <!--android:inputType="number"-->
-                                <!--android:padding="@dimen/min_padding"-->
-                                <!--android:text="" />-->
-
                             <com.aldoapps.autoformatedittext.AutoFormatEditText
                                 android:id="@+id/as_price_basic"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:ems="10"
                                 app:isDecimal="false"
+                                android:maxLength="13"
                                 android:hint="0"
                                 android:padding="@dimen/min_padding"
                                 android:background="@color/colorNearWhite"
                                 />
-                            <!--<faranjit.currency.edittext.CurrencyEditText-->
-                                <!--android:id="@+id/as_price_basic"-->
-                                <!--android:ems="10"-->
-                                <!--android:layout_width="match_parent"-->
-                                <!--android:layout_height="wrap_content"-->
-                                <!--android:inputType="number"-->
-                                <!--android:padding="@dimen/min_padding"-->
-                                <!--android:background="@color/colorNearWhite"-->
-                                <!--app:monetaryDivider=","-->
-                                <!--android:hint="0"-->
-                                <!--app:groupDivider="."-->
-                                <!--app:locale=""-->
-                                <!--app:showSymbol="false"-->
-                                <!--android:textColor="@android:color/black" />-->
 
                             <TextView
                                 android:id="@+id/idra"
@@ -811,7 +831,6 @@
                                 android:layout_marginEnd="@dimen/min_padding"
                                 android:textSize="@dimen/medium_text" />
                         </RelativeLayout>
-
 
                         <RelativeLayout
                             android:layout_width="match_parent"
@@ -871,9 +890,8 @@
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
                                 android:hint="Nama Periode"
-                                android:inputType="textPersonName"
+                                android:inputType="textPersonName|textCapWords"
                                 android:padding="@dimen/min_padding"
-                                android:editable="false"
                                 android:text="" />
 
                         </LinearLayout>
@@ -899,6 +917,8 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
+                                android:editable="false"
+                                android:inputType="date|none"
                                 android:drawableEnd="@drawable/ic_date_range_black_24dp"
                                 android:hint="Tanggal Mulai"
                                 android:padding="@dimen/min_padding"
@@ -926,6 +946,8 @@
                                 android:layout_height="wrap_content"
                                 android:background="@color/colorNearWhite"
                                 android:ems="10"
+                                android:inputType="date|none"
+                                android:editable="false"
                                 android:drawableEnd="@drawable/ic_date_range_black_24dp"
                                 android:hint="Tanggal Akhir"
                                 android:padding="@dimen/min_padding"
@@ -951,16 +973,28 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content">
 
-                                <EditText
+                                <!--<EditText-->
+                                    <!--android:id="@+id/as_price_advance"-->
+                                    <!--android:layout_width="match_parent"-->
+                                    <!--android:layout_height="wrap_content"-->
+                                    <!--android:background="@color/colorNearWhite"-->
+                                    <!--android:ems="10"-->
+                                    <!--android:hint="Harga"-->
+                                    <!--android:inputType="number"-->
+                                    <!--android:padding="@dimen/min_padding"-->
+                                    <!--android:text="" />-->
+
+                                <com.aldoapps.autoformatedittext.AutoFormatEditText
                                     android:id="@+id/as_price_advance"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
-                                    android:background="@color/colorNearWhite"
                                     android:ems="10"
-                                    android:hint="Harga"
-                                    android:inputType="number"
+                                    android:maxLength="13"
+                                    app:isDecimal="false"
+                                    android:hint="0"
                                     android:padding="@dimen/min_padding"
-                                    android:text="" />
+                                    android:background="@color/colorNearWhite"
+                                    />
 
                                 <TextView
                                     android:id="@+id/daye"
@@ -973,6 +1007,32 @@
                                     android:layout_marginEnd="@dimen/min_padding"
                                     android:textSize="@dimen/medium_text" />
 
+                            </RelativeLayout>
+
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <TextView
+                                    android:id="@+id/disptext2"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/colorGrey"
+                                    android:layout_marginTop="@dimen/small_space"
+                                    android:text="Harga yang ditampilkan (+20%):"
+                                    android:textSize="@dimen/almost_tiny_text" />
+
+                                <TextView
+                                    android:id="@+id/as_price_advance_disp"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:textColor="@color/colorPrice"
+                                    android:layout_toEndOf="@+id/disptext2"
+                                    android:layout_alignParentEnd="true"
+                                    android:textAlignment="textEnd"
+                                    android:layout_marginTop="@dimen/small_space"
+                                    android:text="0 IDR"
+                                    android:textSize="@dimen/under_small_text" />
                             </RelativeLayout>
                         </LinearLayout>
 
