--- a/app/src/main/res/layout/content_dashboard.xml
+++ b/app/src/main/res/layout/content_dashboard.xml
@@ -10,55 +10,6 @@
     tools:context="id.rentist.mitrarentist.DashboardActivity"
     tools:showIn="@layout/app_bar_dashboard">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="@dimen/xmin_padding"
-        android:background="@color/colorPrimary"
-        >
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:layout_centerHorizontal="true"
-            android:layout_centerInParent="true"
-            >
-
-            <TextView
-                android:id="@+id/rentName"
-                android:layout_width="wrap_content"
-                android:layout_height="@dimen/btn_lmedium_height"
-                android:padding="@dimen/min_padding"
-                android:textColor="@color/colorWhite"
-                android:textSize="@dimen/large_text"
-                android:textStyle="bold"
-                />
-
-            <ImageView
-                android:id="@+id/navRentVerif"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/rentName"
-                android:src="@drawable/ic_check_circle_white_24dp" />
-
-        </RelativeLayout>
-
-        <com.github.ybq.android.spinkit.SpinKitView
-            android:id="@+id/progressBar"
-            style="@style/SpinKitView.FadingCircle"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/btn_lmedium_height"
-            android:layout_alignParentTop="false"
-            android:layout_centerInParent="true"
-            android:background="@color/colorPrimary"
-            android:padding="@dimen/min_padding"
-            android:visibility="gone"
-            app:SpinKit_Color="@color/colorWhite" />
-    </RelativeLayout>
-
-    <!--head breadsrumb-->
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -69,13 +20,108 @@
             android:orientation="vertical">
 
             <LinearLayout
+                android:id="@+id/account_data_notif"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorOrangeSoft"
+                android:orientation="horizontal"
+                android:padding="@dimen/min_padding">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/textView43"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="@dimen/xmin_padding"
+                        android:text="Mohon Lengkapi Informasi Akun Anda!"
+                        android:textColor="?android:attr/colorMultiSelectHighlight"
+                        android:textSize="16sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/toFormProfile"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:linksClickable="true"
+                        android:text="@string/perbarui_akun_notif"
+                        android:textColor="?attr/colorPrimary" />
+
+                </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/imageView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:padding="@dimen/xmin_padding"
+                    app:srcCompat="@android:drawable/stat_notify_error" />
+
+            </LinearLayout>
+
+            <!--head breadsrumb-->
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/xmin_padding"
+                android:background="@color/colorPrimary">
+
+                <RelativeLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerInParent="true">
+
+                    <TextView
+                        android:id="@+id/rentName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="@dimen/btn_lmedium_height"
+                        android:padding="@dimen/min_padding"
+                        android:textColor="@color/colorWhite"
+                        android:textSize="@dimen/large_text"
+                        android:textStyle="bold" />
+
+                    <ImageView
+                        android:id="@+id/navRentVerif"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_toEndOf="@id/rentName"
+                        android:src="@drawable/ic_check_circle_white_24dp" />
+
+                </RelativeLayout>
+
+                <com.github.ybq.android.spinkit.SpinKitView
+                    android:id="@+id/progressBar"
+                    style="@style/SpinKitView.FadingCircle"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/btn_lmedium_height"
+                    android:layout_alignParentTop="false"
+                    android:layout_centerInParent="true"
+                    android:background="@color/colorPrimary"
+                    android:padding="@dimen/min_padding"
+                    android:visibility="gone"
+                    app:SpinKit_Color="@color/colorWhite" />
+            </RelativeLayout>
+
+            <!--head breadsrumb-->
+
+            <LinearLayout
                 android:id="@+id/tr_breadcrumb"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="@dimen/xmin_padding"
                 android:background="@color/colorWhite"
                 android:orientation="vertical"
-                android:padding="@dimen/no_padding">
+                android:padding="@dimen/no_padding"
+                android:visibility="gone">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -234,8 +280,8 @@
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
                     android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
                     android:layout_marginEnd="@dimen/min_padding"
                     android:layout_marginStart="@dimen/min_padding"
                     android:orientation="horizontal"
