--- a/app/src/main/res/layout/content_form_registration.xml
+++ b/app/src/main/res/layout/content_form_registration.xml
@@ -125,16 +125,33 @@
                         android:layout_height="wrap_content"
                         android:text="Nomor Handphone" />
 
-                    <EditText
-                        android:id="@+id/reg_phone"
+                    <RelativeLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@color/colorNearWhite"
-                        android:ems="10"
-                        android:hint="08xx xxxx xxxx"
-                        android:imeOptions="actionNext"
-                        android:inputType="phone"
-                        android:padding="@dimen/min_padding" />
+                        android:background="@color/colorNearWhite">
+
+                        <com.hbb20.CountryCodePicker
+                            android:id="@+id/country_code"
+                            android:layout_width="wrap_content"
+                            android:layout_height="match_parent"
+                            android:layout_centerVertical="true"
+                            app:ccp_defaultNameCode="ID"
+                            app:ccp_showFlag="false" />
+
+                        <EditText
+                            android:id="@+id/reg_phone"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_toEndOf="@+id/country_code"
+                            android:background="@color/colorNearWhite"
+                            android:ems="10"
+                            android:hint="08xx xxxx xxxx"
+                            android:imeOptions="actionNext"
+                            android:inputType="phone"
+                            android:padding="@dimen/min_padding" />
+
+                    </RelativeLayout>
+
                 </LinearLayout>
 
                 <LinearLayout
