--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,6 +18,7 @@
     <color name="colorButtonDefault">#e2e2e2</color>
     <color name="colorDanger">#ff2828</color>
     <color name="colorPrice">#f19800</color>
+    <color name="colorOrangeSoft">#f5ce8a</color>
     <color name="colorBackgound">#d6d6d6</color>
     <color name="colorBackgoundCard">#c4c4c4</color>
     <color name="backgoundLighter">#eeeeee</color>
